--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'UA-109343978-1');
 	</script>
-	<title>En maintenance !</title>
+	<title>Pizzavia Ciao Ciao</title>
 </head>
 <body>
 	<h1>En maintenance !</h1>
